src/sql/workbench/parts/tasks/browser/media/tasksPanel.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Microsoft Corporation. All rights reserved.
 *  Licensed under the Source EULA. See License.txt in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

.empty-task-message {
	padding: 10px 22px 0 22px;
}

.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group {
	line-height: 22px;
	display: flex;
}

/* task label and description */
.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .label {
	text-overflow: ellipsis;
	overflow: hidden;
	font-weight: bold;
}

/* style for server name | database name */
.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .description {
	text-overflow: ellipsis;
	overflow: hidden;
	padding-left: 12px
}

/* style for timing */
.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .time {
	padding-left: 12px;
	opacity: .6;
	text-overflow: ellipsis;
	font-style: italic
}

/* task icon status */
.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon {
	background-size: 16px;
	background-position: left center;
	background-repeat: no-repeat;
	padding-right: 6px;
	width: 22px;
	height: 22px;
	display: inline-block;
}

.vs .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.not-started {
	background-image: url('status_queuedtask.svg');
}

.vs-dark .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.not-started,
.hc-black .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.not-started {
	background-image: url('status_queuedtask_inverse.svg');
}

.vs .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.in-progress {
	background-image: url("loading.svg");
}

.vs-dark .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.in-progress,
.hc-black .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.in-progress {
	background-image: url("loading_inverse.svg");
}

.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.success {
	background-image: url("status_success.svg");
}

.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.canceled {
	background-image: url("status_cancelled.svg");
}

.monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .task-group > .task-icon.error {
	background-image: url("error.svg");
}

